--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-    image: timescale/pg_prometheus:latest
+    image: yosuaalv/pg_prometheus:latest
     ports:
     - 5432:5432/tcp
   prometheus:
@@ -25,7 +25,7 @@ services:
       TS_PROM_PG_PASSWORD: postgres
       TS_PROM_PG_SCHEMA: postgres
       TS_PROM_WEB_TELEMETRY_PATH: /metrics-text
-    image: timescale/prometheus-postgresql-adapter:latest
+    image: yosuaalv/prometheus-postgresql-adapter:latest
     ports:
     - 9201:9201/tcp
 version: '3.0'
