--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
-    image: yosuaalv/pg_prometheus:latest
+    image: timescale/pg_prometheus:latest
     ports:
     - 5432:5432/tcp
   prometheus:
